# butter-scroll

./: .gitignore  AGENTS.md  Cargo.toml  README.md  README.zh.md  config.default.toml  index.html  lefthook.yml  mise.toml  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
.cargo/: config.toml
.github/workflows/: build.yml  ci.yml  release.yml
.sisyphus/: ralph-loop.local.md
.sisyphus/evidence/: task-1-config-overrides-parse.txt  task-1-config-overrides-sanitize.txt  task-11-all-tests.txt  task-12-build.txt  task-2-threshold-cache-tests.txt  task-3-cargo-check.txt  task-3-existing-tests.txt  task-4-engine-tests.txt  task-5-hook-build.txt  task-6-flush-per-app.txt  task-7-pid-resolution.txt  task-8-wpf-heuristic.txt  task-9-detection-trigger.txt
.sisyphus/notepads/adaptive-threshold/: decisions.md  issues.md  learnings.md
docs/: configuration.md
src/: App.svelte  app.css  app.rs  autostart.rs  config.rs  confirm-app-filter.html  confirm-app-filter.ts  detector.rs  detector_win.rs  engine.rs  hook.rs  injector.rs  keyboard_hook.rs  main.rs  main.ts  pulse.rs  resolve_win.rs  threshold.rs  traits.rs  tray.rs  util.rs
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  config.rs  easing.rs  engine.rs  foreground.rs  hook.rs  hotkey.rs  injector.rs  keyboard_hook.rs  lib.rs  main.rs  pulse.rs  resolve.rs  resolve_win.rs  state.rs  threshold.rs  traits.rs  tray.rs
src/lib/: AccelerationSettings.svelte  AppFilterSettings.svelte  AppFilterSetup.svelte  ConfirmAppFilter.svelte  GeneralSettings.svelte  HotkeySettings.svelte  KeyboardSettings.svelte  OutputSettings.svelte  ScrollSettings.svelte  api.ts  types.ts
tools/: zigcc
