[package]
name = "butter-scroll"
version = "0.2.0-pre.3"
edition = "2021"
description = "Buttery smooth mouse wheel scrolling for Windows"
license = "MIT"

[dependencies]
serde = { version = "1", features = ["derive"] }
toml = "0.8"
crossbeam-channel = "0.5"

[target.'cfg(windows)'.dependencies.windows-sys]
version = "0.59"
features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_Shell",
    "Win32_System_LibraryLoader",
    "Win32_System_Registry",
    "Win32_Media",
    "Win32_Graphics_Gdi",
]

[profile.release]
opt-level = 3
lto = true
strip = true
