[package]
name = "butter-scroll"
version = "0.2.0-pre.6"
edition = "2021"
description = "Buttery smooth mouse wheel scrolling for Windows"
license = "MIT"

[lib]
name = "butter_scroll_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]

[dependencies]
log = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
crossbeam-channel = "0.5"
urlencoding = "2.1"

[target.'cfg(target_os = "windows")'.dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-autostart = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-log = "2"
tauri-plugin-dialog = "2"
tauri-plugin-process = "2"
tauri-plugin-updater = "2"

[target.'cfg(target_os = "windows")'.build-dependencies]
tauri-build = { version = "2", features = [] }

[target.'cfg(windows)'.dependencies.windows-sys]
version = "0.59"
features = [
    "Win32_Foundation",
    "Win32_UI_Controls",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_Shell",
    "Win32_System_LibraryLoader",
    "Win32_System_Registry",
    "Win32_System_Threading",
    "Win32_Media",
    "Win32_Graphics_Gdi",
]

[dev-dependencies]
tempfile = "3"

[profile.release]
opt-level = 3
lto = true
strip = true
